Attempted fix for issue 11 (deadlock on Windows in example code)

* deadlock was likely happening because of https://bugreports.qt.io/browse/QTBUG-34460
* replaced thread pool implementation with a QThread.

Warning: this commit exhibits unexpected behaviour on Windows 7 +
MinGW 4.9.2 32-bit, but not on Linux or Mac OS X. See 1) and 2) for more details.

1) The example sometimes outputs "QWaitCondition: Destroyed while threads are still waiting".
However:
* The log thread is the only thread waiting on a wait condition,
and it is joined successfully before being destroyed.
* If "threads are still waiting" the join call should never return...
2) The example can sometimes output "QMutex: destroying locked mutex" or
take a few seconds to shut down.
However:
* All mutexes are locked and unlocked automatically using QMutexLocker.
* All threads are nicely exited.